[gd_scene load_steps=13 format=3 uid="uid://coq7rqwpbf6rs"]

[ext_resource type="Texture2D" uid="uid://bpfa7asdpbk24" path="res://game/screen/start_screen/start_screen.png" id="1_jfhku"]
[ext_resource type="Script" path="res://game/screen/start_screen/start_screen.gd" id="1_ustq1"]
[ext_resource type="AudioStream" uid="uid://cm1gw4072fonv" path="res://game/music/Juhani Junkala [Retro Game Music Pack] Title Screen.ogg" id="2_g8xkf"]
[ext_resource type="PackedScene" uid="uid://b3wnrigknxqlh" path="res://game/screen/start_screen/planet.tscn" id="3_pfhkv"]
[ext_resource type="Texture2D" uid="uid://c84l2uxluigab" path="res://game/screen/start_screen/tmp_button.png" id="4_d2ori"]
[ext_resource type="FontFile" uid="uid://c5d8fl5dxbsla" path="res://game/font/ThaleahFat.ttf" id="4_flwk7"]
[ext_resource type="FontFile" uid="uid://c701rmv1hbnfl" path="res://game/font/RaccoonSerif-Bold.ttf" id="7_qx2ow"]

[sub_resource type="AtlasTexture" id="AtlasTexture_asrrk"]
atlas = ExtResource("4_d2ori")
region = Rect2(0, 0, 256, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_pq6hu"]
atlas = ExtResource("4_d2ori")
region = Rect2(512, 0, 256, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_c27ci"]
atlas = ExtResource("4_d2ori")
region = Rect2(256, 0, 256, 80)

[sub_resource type="Animation" id="Animation_lt6sk"]
resource_name = "fade_in_music"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AudioStreamPlayer:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [-36.608, -12.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_2h8i0"]
_data = {
"fade_in_music": SubResource("Animation_lt6sk")
}

[node name="start_screen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ustq1")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("1_jfhku")

[node name="planet" parent="." instance=ExtResource("3_pfhkv")]
position = Vector2(-92, 253)

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_g8xkf")
volume_db = -16.944

[node name="btn_Start" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 336.0
offset_top = 256.0
offset_right = 595.0
offset_bottom = 336.0
texture_normal = SubResource("AtlasTexture_asrrk")
texture_pressed = SubResource("AtlasTexture_pq6hu")
texture_hover = SubResource("AtlasTexture_c27ci")

[node name="Label2" type="Label" parent="btn_Start"]
layout_mode = 0
offset_left = 67.0
offset_top = 24.0
offset_right = 175.0
offset_bottom = 53.0
text = "PLAY"
horizontal_alignment = 1

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 174.0
offset_top = 54.0
offset_right = 854.0
offset_bottom = 175.0
theme_override_fonts/font = ExtResource("4_flwk7")
theme_override_font_sizes/font_size = 128
text = "ALPHA SPACE"

[node name="lbl_Version" type="Label" parent="."]
layout_mode = 0
offset_left = 916.0
offset_top = 2.0
offset_right = 1025.0
offset_bottom = 59.0
text = "0.1.0"

[node name="Label3" type="Label" parent="."]
layout_mode = 0
offset_left = 112.0
offset_top = 432.0
offset_right = 280.0
offset_bottom = 458.0
text = "Enter Seed"
horizontal_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_2h8i0")
}

[node name="txt_Seed" type="TextEdit" parent="."]
layout_mode = 0
offset_left = 112.0
offset_top = 464.0
offset_right = 279.0
offset_bottom = 507.0

[node name="btn_DailyRun" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 336.0
offset_top = 376.0
offset_right = 592.0
offset_bottom = 458.0
texture_normal = SubResource("AtlasTexture_asrrk")
texture_pressed = SubResource("AtlasTexture_pq6hu")
texture_hover = SubResource("AtlasTexture_c27ci")

[node name="Label4" type="Label" parent="btn_DailyRun"]
layout_mode = 0
offset_left = 89.0
offset_top = 28.0
offset_right = 177.0
offset_bottom = 56.0
text = "DAILY RUN"

[node name="btn_HowToPlay" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 336.0
offset_top = 482.0
offset_right = 592.0
offset_bottom = 564.0
texture_normal = SubResource("AtlasTexture_asrrk")
texture_pressed = SubResource("AtlasTexture_pq6hu")
texture_hover = SubResource("AtlasTexture_c27ci")

[node name="Label5" type="Label" parent="btn_HowToPlay"]
layout_mode = 0
offset_left = 57.0
offset_top = 25.0
offset_right = 209.0
offset_bottom = 53.0
text = "HELP"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HelpScreen" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="TextureRect2" type="TextureRect" parent="HelpScreen"]
layout_mode = 0
offset_right = 1024.0
offset_bottom = 600.0
texture = ExtResource("1_jfhku")

[node name="Label" type="Label" parent="HelpScreen"]
layout_mode = 0
offset_right = 432.0
offset_bottom = 307.0

[node name="RichTextLabel" type="RichTextLabel" parent="HelpScreen"]
layout_mode = 0
offset_left = 156.0
offset_top = 56.0
offset_right = 906.0
offset_bottom = 493.0
theme_override_fonts/normal_font = ExtResource("7_qx2ow")
theme_override_font_sizes/normal_font_size = 42
text = "How to Play


Use letters to make words
Left mouse to use letter
Right mouse to store a letter"

[node name="btn_Back" type="TextureButton" parent="HelpScreen"]
layout_mode = 0
offset_left = 42.0
offset_top = 516.0
offset_right = 298.0
offset_bottom = 598.0
scale = Vector2(0.7, 0.7)
texture_normal = SubResource("AtlasTexture_asrrk")
texture_pressed = SubResource("AtlasTexture_pq6hu")
texture_hover = SubResource("AtlasTexture_c27ci")

[node name="Label5" type="Label" parent="HelpScreen/btn_Back"]
layout_mode = 0
offset_left = 57.0
offset_top = 25.0
offset_right = 209.0
offset_bottom = 53.0
text = "BACK"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="btn_Start" to="." method="_on_btn_start_pressed"]
[connection signal="pressed" from="btn_DailyRun" to="." method="_on_btn_daily_run_pressed"]
[connection signal="pressed" from="btn_HowToPlay" to="." method="_on_btn_how_to_play_pressed"]
[connection signal="pressed" from="HelpScreen/btn_Back" to="." method="_on_btn_back_pressed"]
